src/ui/snapshots/cctop__ui__agents_view__tests__agents_c_120x30.snap
---
source: src/ui/agents_view.rs
expression: "render_to_string(&app, 120, 30)"
---
┌ Agents ─ 2 · 0 running · ≈$0.31 · wasted ≈$0.18 (58 %)  ↕spend↓  (s/S sort, j/k, Enter expand, Esc back) ────────────┐
│   type     model    time   tok    ≈$   ret  waste                                                                    │
│ ✗ Explore  sonnet  1m 21  354k  0.18    41   0.18 killed                                                             │
│ ✓ fork     sonnet    39s  485k  0.13   517   0.00  ↰62k                                                              │
│────────────────────────────────────────────────────────────                                                          │
│ waste: failed 0.00 · killed 0.18 · no ret 0.00 · idle 0.00                                                           │
│ cold starts 1 (≈$0.05 writes) · 62.6 % of output returned                                                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Esc back  a ask  c coach  t theme  L sessions  q
