src/ui/snapshots/cctop__ui__agents_view__tests__agents_synthetic_120x30.snap
---
source: src/ui/agents_view.rs
expression: "render_to_string(&app, 120, 30)"
---
┌ Agents ─ 25 · 1 running · ≈$2.23 · wasted ≈$0.45 (20 %)  ↕spend↓  (s/S sort, j/k, Enter expand, Esc back) ───────────┐
│   type     model    time   tok    ≈$   ret  waste                                                                    │
│ ✓ general  opus      14s  122k  0.35   300   0.00                                                                    │
│ ✓ claude   opus      28s  205k  0.21   300   0.00                                                                    │
│ ✓ Plan     opus      21s  164k  0.17   300   0.00                                                                    │
│ ✓ general  opus      14s  123k  0.12   300   0.00                                                                    │
│ ◐ Explore  opus   56m 00   82k  0.08   ...   0.08 idle 55m                                                           │
│ ✓ claude   sonnet    28s  205k  0.08   300   0.00                                                                    │
│ ✓ Explore  opus       7s   82k  0.08   300   0.00                                                                    │
│ ✓ general  haiku     14s  122k  0.07   300   0.00                                                                    │
│ ✗ Plan     sonnet    21s  164k  0.07     —   0.07 failed                                                             │
│ ✓ Plan     sonnet    21s  164k  0.07   300   0.00                                                                    │
│ ✗ general  sonnet    14s  123k  0.05     1   0.05 killed                                                             │
│ ✗ claude   haiku     28s  205k  0.04     —   0.04 failed                                                             │
│ ✓ claude   haiku     28s  205k  0.04   300   0.00                                                                    │
│ ✓ Plan     haiku     21s  164k  0.03     0   0.03 no ret                                                             │
│ ✓ Explore  sonnet     7s   82k  0.03   300   0.00                                                                    │
│ ✓ Explore  haiku      7s   82k  0.02   300   0.00                                                                    │
│ ✓ Explore  haiku      7s   82k  0.02   300   0.00                                                                    │
│ ‖ wf_abc-123               ✗2  ≈$0.70  9 launched · 6 done                                                           │
│────────────────────────────────────────────────────────────                                                          │
│ waste: failed 0.28 · killed 0.05 · no ret 0.03 · idle 0.08                                                           │
│ cold starts 3 (≈$0.40 writes) · 5.2 % of output returned                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Esc back  a ask  c coach  t theme  L sessions  q
