src/ui/snapshots/cctop__ui__agents_view__tests__agents_w_detail_120x30.snap
---
source: src/ui/agents_view.rs
expression: "render_to_string(&app, 120, 30)"
---
┌ Agents ─ 210 · 0 running · ≈$48.6 · wasted ≈$7.97 (16 %)  (j/k, o copy pointer, Esc back) ───────────────────────────┐
│ wf_0aa065ff-0a0  sweep-4  completed  17h 16m  $48.59  0.6×main  cold 18 %                                            │
│ phase        start   res    ✗      ✗$  waste  cause                                                                  │
│ Sweep            6     6    0    0.00    0 %                                                                         │
│ Candidates       4     4    0    0.00    0 %                                                                         │
│ Merge            1     1    0    0.00    0 %                                                                         │
│ Verify         246    44  173    1.97   60 %  429×171 ?×2                                                            │
│ Design          38     9   29    5.99   51 %  429×29                                                                 │
│ Critic           5     1    4    0.00    0 %  429×4                                                                  │
│ ───                                                                                                                  │
│ 198 agents hit the rate limit on their first call — batch this phase's items, or lower its effort/model              │
│   → sweep-4.js:144 parallel() · script changed since                                                                 │
│ 6 agents hit the rate limit mid-task — batch this phase, then resume the run after the window resets                 │
│   → sweep-4.js:144 parallel() · script changed since                                                                 │
│   type     model    time   tok    ≈$   ret  waste                                                                    │
│ ✓ workflo… fable  41m 46 2.69M  12.8     —   0.00                                                                    │
│ ✓ workflo… fable  12m 51 3.15M  8.74     —   0.00                                                                    │
│ ✓ workflo… fable   7m 59 1.28M  6.37     —   0.00                                                                    │
│ ✗ workflo… fable   2h 35 1.59M  5.99     —   5.99 failed                                                             │
│ ✓ workflo… fable  13m 50 1.64M  5.73     —   0.00                                                                    │
│ ✓ workflo… fable  12m 03  592k  5.69     —   0.00                                                                    │
│ ✓ workflo… fable   3m 01  473k  1.29     —   0.00                                                                    │
│ ✗ workflo… fable   7h 35  323k  0.84     —   0.84 failed                                                             │
│ ✗ workflo… fable  15h 24  218k  0.49     —   0.49 failed                                                             │
│ ✗ workflo… fable   7h 32   40k  0.23     —   0.23 failed                                                             │
│ ✗ workflo… fable   7h 32   40k  0.22     —   0.22 failed                                                             │
│ ✗ workflo… fable  12h 34   39k  0.19     —   0.19 failed                                                             │
│ ✗ workflo…        12h 33     0     —     —      — failed                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Esc back  a ask  c coach  t theme  L sessions  q
