src/ui/snapshots/cctop__ui__agents_view__tests__agents_workflow_detail_120x30.snap
---
source: src/ui/agents_view.rs
expression: "render_to_string(&app, 120, 30)"
---
┌ Agents ─ 5 · 0 running · ≈$0.05 · wasted ≈$0.03 (50 %)  (j/k, o copy pointer, Esc back) ─────────────────────────────┐
│ wf_t  sweep  completed  5:00  $0.05  —×main  cold 93 %                                                               │
│ phase        start   res    ✗      ✗$  waste  cause                                                                  │
│ Verify           4     1    3    0.00    0 %  429×3                                                                  │
│ Design           1     0    1    0.03  100 %  429×1                                                                  │
│ ───                                                                                                                  │
│ 3 agents hit the rate limit on their first call — batch this phase's items, or lower its effort/model                │
│   → sweep.js:6 pipeline()                                                                                            │
│ 1 agent hit the rate limit mid-task — batch this phase, then resume the run after the window resets                  │
│   type     model    time   tok    ≈$   ret  waste                                                                    │
│ ✗          haiku   1m 00   21k  0.03     —   0.03 failed                                                             │
│ ✓          haiku      0s   21k  0.03     —   0.00                                                                    │
│ ✗                     0s     0     —     —      — failed                                                             │
│ ✗                     0s     0     —     —      — failed                                                             │
│ ✗                     0s     0     —     —      — failed                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Esc back  a ask  c coach  t theme  L sessions  q
